--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "api-meteora",
   "version": "1.0.0",
   "description": "",
-  "main": "api/server.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node ./api/server.js",
+    "start": "node api/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
