--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
     "builds": [
       {
         "src": "api/server.js",
-        "use": "@vercel/node"
+        "use": "@vercel/node",
+        "config": {
+            "includeFiles": ["db.json"]
+          }
       }
     ],
     "routes": [
@@ -11,6 +14,5 @@
         "src": "/(.*)",
         "dest": "api/server.js"
       }
-    ],
-    "files": ["db.json"]
+    ]
   }
